solver sonarqube problems